2011-12-13 Kazuhiko
* use event_simulation_workflow instead of event_workflow for Event-type portal types. use portal_alarms/upgrader_migrate_event_workflow_history for migration.

2010-11-05 yusei
* Simplify Event_init.

2010-10-14 lucas
* Generate reference automatically for Support Request.

2010-08-19 lucas
* Added Codification Property Sheet on Support Request portal type, to avoid setCodification error during clone.

2009-11-13 romain
* Apply new field library convention

2009-10-16 rafael
* Update for the changes of new portal types of portal types.

2009-09-07 yusuke
* Replace ERP5Report to ERP5Form and ReportBox

2009-08-19 tatuya
* Fix listbox source_title column name for Ticket  from 'Handler' to 'Operations Manager'. In ticket, the word 'Handler ' is not used already.

2009-07-02 romain
* Revert latest proxy field library simplification, as the design was not finalized.

2009-05-27 Seb
* Add Site Message and Acknowledgements

2009-05-23 JPS
* Tickets can specialise a Trade Condition

2009-05-18 yusei
* Fix some proxy fields. count_method should not be inherited from template field and proxy_listbox_ids had to be copied to new proxified fields but it was not copied.

2009-05-13 yusei
* Fix Event_view.my_text_content due to the core field library issue.
* Add a template field for Editor Field to Base_viewCRMFieldLibrary.

2009-05-08 yusei
* Simplify field libraries and proxy fields. Old field libraries are kept for backward compatibility.
* Update dependencies.

2009-04-18 Kazuhiko
* Version 5.4.1

2009-04-17 nicolas
* Extend Entity_viewEventList to support displaying of Suport Requests

2009-03-02 yusei
* Bug fixed. Recipients of ingested email should be set to destination category on event.

2008-11-13 yusei
* Start to develop version 5.4.

2008-10-30 rafael
* Added Marked Posted transition for new messages.

2008-10-24 yusei