@@ -1,4 +1,5 @@
 <key_list>
+ <key>destination_decision_language | category,versioning/language/z_related_destination_decision_versioning</key>
  <key>event_causality_ticket_uid | category,catalog,category,catalog/uid/z_related_event_causality_ticket</key>
  <key>related_source_decision_or_destination_decision | category,catalog,catalog/uid/z_related_source_decision_or_destination_decision</key>
  <key>related_source_or_destination | category,catalog,catalog/uid/z_related_source_or_destination</key>
