@@ -1,3 +1,4 @@
+erp5_mysql_innodb/z_related_destination_decision_versioning
 erp5_mysql_innodb/z_related_event_causality_ticket
 erp5_mysql_innodb/z_related_source_decision_or_destination_decision
 erp5_mysql_innodb/z_related_source_or_destination
