@@ -5,3 +5,4 @@ related_source_section_or_destination_section | category,catalog,catalog/uid/z_r
 related_source_decision_or_destination_decision | category,catalog,catalog/uid/z_related_source_decision_or_destination_decision
 related_source_or_source_decision_or_destination_or_destination_decision | category,catalog,catalog/uid/z_related_source_or_source_decision_or_destination_or_destination_decision
 related_source_or_source_section_or_destination_or_destination_section | category,catalog,catalog/uid/z_related_source_or_source_section_or_destination_or_destination_section
+destination_decision_language | category,versioning/language/z_related_destination_decision_versioning
